Fix quiz-form dropping below screen on mobile

--- a/assets/quiz.css
+++ b/assets/quiz.css
@@ -152,7 +152,7 @@
   }
 
   #quiz-form {
-    margin-top: 25%;
+    margin-top: 25vh;
   }
 
   .quiz-question {
